# yulang

./: .gitignore  .gitmodules  Cargo.toml  README.ja.md  README.md
crates/chasa/: Cargo.toml  README.md
crates/chasa/src/: back.rs  char.rs  error.rs  lib.rs  parser.rs
crates/chasa/src/error/: std.rs
crates/chasa/src/input/: counter.rs  impls.rs  is_cut.rs  mod.rs  offset.rs  tests.rs  with_counter.rs
crates/chasa/src/parser/: chain.rs  choice.rs  flow.rs  item.rs  many.rs  memo.rs  prim.rs  sep.rs  str.rs  then.rs  token.rs  trie.rs
crates/control-ir/: Cargo.toml
crates/control-ir/src/: application_provenance.rs  evidence_ir.rs  ir.rs  lib.rs  lower.rs  selection_provenance.rs  validate.rs
crates/control-ir/src/runtime/: bind.rs  frame.rs  thunk.rs  time.rs
crates/control-vm/: Cargo.toml
crates/control-vm/src/: boundary.rs  effect_profile.rs  evidence_ir.rs  format.rs  ir.rs  lib.rs  lower.rs  runtime.rs  tests.rs  validate.rs
crates/control-vm/src/runtime/: bind.rs  engine.rs  eval.rs  flow.rs  frame.rs  scope_state.rs  thunk.rs
crates/infer/: Cargo.toml
crates/infer/src/: act_resolve.rs  analysis.rs  annotation.rs  arena.rs  builtin_ops.rs  casts.rs  check.rs  compact.rs  compiled_lowering.rs  compiled_namespace.rs  compiled_runtime.rs  compiled_typed.rs  constraints.rs  doc_comment_render.rs  doc_comment_render_input.rs  dump.rs  generalize.rs  host_acts.rs  instantiate.rs  lib.rs  lowering.rs  methods.rs  patterns.rs  role_impl_conformance.rs  role_solve.rs  roles.rs  scc.rs  std_paths.rs  syntax.rs  typing.rs  uses.rs
crates/infer/src/analysis/: cache_interface.rs  method_taint.rs  mod.rs  projection.rs  timing.rs  trace.rs  work.rs
crates/infer/src/annotation/: builder.rs  constraints.rs  tests.rs
crates/infer/src/compact/: analysis.rs  casts.rs  finalize.rs  mod.rs  surface.rs
crates/infer/src/constraints/: directed_weight.rs  explain.rs  mod.rs  mutation.rs  ocast_eligibility.rs  portable_explain.rs  row_effect.rs  timing.rs  trace.rs
crates/infer/src/generalize/: finalize.rs  mod.rs  provenance.rs  simplification.rs  tests.rs
crates/mono-runtime/: Cargo.toml
crates/mono-runtime/src/: lib.rs  tests.rs
crates/reborrow-generic/: Cargo.toml  README.md
crates/reborrow-generic-derive/: Cargo.toml  LICENSE-MIT  README.md
crates/reborrow-generic-derive/src/: lib.rs
crates/reborrow-generic/src/: lib.rs
crates/wasm/: Cargo.toml  build.rs
crates/wasm/src/: lib.rs  playground_tests.rs
crates/yulang/: Cargo.toml
crates/yulang-compile/: Cargo.toml
crates/yulang-compile/src/: lib.rs
crates/yulang-editor/: Cargo.toml
crates/yulang-editor/src/: lib.rs  semantic_tokens.rs
crates/yulang-elaborate/: Cargo.toml
crates/yulang-elaborate/src/: constraints.rs  draft.rs  lib.rs
crates/yulang-elaborated-ir/: Cargo.toml
crates/yulang-elaborated-ir/src/: lib.rs
crates/yulang-infer/: Cargo.toml
crates/yulang-infer/src/: artifact_cache.rs  diagnostic.rs  flow_capability.rs  ids.rs  lib.rs  profile.rs  ref_table.rs  source.rs  std_flow_paths.rs  std_ref_paths.rs  surface_diagnostic.rs  symbols.rs  tests.rs
crates/yulang-lsp/: Cargo.toml
crates/yulang-lsp/src/: main.rs  semantic_tokens.rs
crates/yulang-monomorphize/: Cargo.toml
crates/yulang-monomorphize/src/: cache.rs  diagnostic.rs  graph.rs  lib.rs  output.rs
crates/yulang-native/: Cargo.toml
crates/yulang-native/src/: abi.rs  abi_eval.rs  abi_format.rs  abi_lane.rs  abi_subset.rs  abi_validate.rs  backend_selection.rs  closure.rs  compare.rs  control_ir.rs  cps_capture.rs  cps_compare.rs  cps_effect_regions.rs  cps_effectful_calls.rs  cps_eval.rs  cps_ir.rs  cps_lower.rs  cps_optimize.rs  cps_repr.rs  cps_repr_abi.rs  cps_repr_cranelift.rs  cps_runtime.rs  cps_validate.rs  cranelift.rs  eval.rs  gc_runtime.rs  lib.rs  lower.rs  mmtk_binding.rs  mmtk_cps_control.rs  mmtk_runtime.rs  native_runtime.rs  source.rs  value_cranelift.rs
crates/yulang-parser/: Cargo.toml
crates/yulang-parser/src/: context.rs  lex.rs  lib.rs  op.rs  sink.rs
crates/yulang-parser/tests/: expr_grammar.rs  mark_grammar.rs  pat_grammar.rs  stmt_grammar.rs  trivia_grammar.rs  type_grammar.rs
crates/yulang-pipeline/: Cargo.toml
crates/yulang-pipeline/src/: lib.rs
crates/yulang-runtime/: Cargo.toml
crates/yulang-runtime-finalize/: Cargo.toml
crates/yulang-runtime-finalize/src/: body.rs  cache.rs  diagnostic.rs  effect.rs  emit.rs  graph.rs  lib.rs  module.rs  output.rs  planner.rs  principal.rs  role.rs  solver.rs  types.rs  validate.rs
crates/yulang-runtime-lower/: Cargo.toml
crates/yulang-runtime-lower/src/: elaborated.rs  lib.rs
crates/yulang-runtime-refine/: Cargo.toml
crates/yulang-runtime-refine/src/: hygiene.rs  lib.rs
crates/yulang-runtime-types/: Cargo.toml
crates/yulang-runtime-types/src/: lib.rs  runtime_intrinsic.rs
crates/yulang-runtime/src/: diagnostic.rs  host.rs  hygiene.rs  invariant.rs  ir.rs  lib.rs  runtime_intrinsic.rs  runtime_type.rs
crates/yulang-source/: Cargo.toml
crates/yulang-source/src/: lib.rs
crates/yulang-sources/: Cargo.toml
crates/yulang-sources/src/: cache.rs  lib.rs  lock.rs  stdlib.rs
crates/yulang-sources/std/: bytes.yu  console.yu  control.yu  fold.yu  fs.yu  junction.yu  list.yu  num.yu  ops.yu  opt.yu  out.yu  parse.yu  prelude.yu  range.yu  result.yu  str.yu  undet.yu  var.yu
crates/yulang-typed-ir/: Cargo.toml
crates/yulang-typed-ir/src/: expr.rs  graph.rs  lib.rs  type_order.rs
crates/yulang-vm/: Cargo.toml
crates/yulang-vm/src/: host.rs  lib.rs
crates/yulang-wasm/: Cargo.toml  build.rs  std_sources_manifest.rs
crates/yulang-wasm/src/: color.rs  lib.rs  output.rs  std_sources.rs
crates/yulang/src/: artifact.rs  cache.rs  contract.rs  cst_view.rs  evidence_vm.rs  lib.rs  main.rs  parse_view.rs  playground_std.rs  runtime_evidence_debug.rs  runtime_evidence_run.rs  server.rs  source.rs  std_prefix_cache_safety.rs  stdlib.rs  support.rs  time.rs  yumark_eval.rs  yumark_render_worker.rs
crates/yulang/tests/: cli.rs  native_cli.rs  runtime_finalize_cli.rs  yuir_cli.rs  yumark_shadow_literal_performance.rs
(+1824 files in other folders)
