[workspace]
resolver = "2"
members = [
  "crates/parser",
  "crates/mono",
  "crates/mono-runtime",
  "crates/specialize",
  "crates/control-vm",
  "crates/list-tree",
  "crates/yulang",
  "crates/poly",
  "crates/infer",
  "crates/sources",
  "crates/wasm",
]

[profile.profiling]
inherits = "release"
debug = true
strip = false
