[package]
name = "control-ir"
version = "0.1.0"
edition = "2024"

[dependencies]
mono = { path = "../mono" }
num-bigint = "0.4"
serde = { version = "1", features = ["derive"] }
smallvec = "1.13.2"
list-tree = { path = "../list-tree" }
text-tree = { path = "../text-tree" }

[dev-dependencies]
infer = { path = "../infer" }
mono-runtime = { path = "../mono-runtime" }
sources = { path = "../sources" }
specialize = { path = "../specialize" }
