[package]
name = "control-vm"
version = "0.1.0"
edition = "2024"

[dependencies]
mono = { path = "../mono" }
num-bigint = "0.4"
serde = { version = "1", features = ["derive"] }
yulang-list-tree = { path = "../yulang-list-tree" }

[dev-dependencies]
infer = { path = "../infer" }
mono-runtime = { path = "../mono-runtime" }
sources = { path = "../sources" }
specialize = { path = "../specialize" }
