[package]
name = "infer"
version = "0.1.0"
edition = "2024"

[dependencies]
poly = { path = "../poly" }
sources = { path = "../sources" }
parser = { path = "../parser" }
rowan = "0.15"
rustc-hash = "2"
num-bigint = "0.4"
smallvec = "1.13.2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
specialize = { path = "../specialize" }
