[package]
name = "reborrow-generic-derive"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Derive macros for reborrow-generic."
repository = "https://github.com/momota1029/yulang"

[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.110", features = ["visit-mut"] }
