[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
evidence-vm = { path = "../evidence-vm" }
parser = { path = "../parser" }
poly = { path = "../poly" }
rowan = "0.15"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
sources = { path = "../sources" }
wasm-bindgen = "0.2"
yulang = { path = "../yulang" }
yulang-editor = { path = "../yulang-editor" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"

[build-dependencies]
yulang = { path = "../yulang" }
