[package]
name = "yulang-compile"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Source-level compilation glue for Yulang frontends and backends."
repository = "https://github.com/momota1029/yulang"
readme = "../../README.md"

[dependencies]
yulang-infer = { version = "0.1.3", path = "../yulang-infer" }
yulang-runtime = { version = "0.1.1", path = "../yulang-runtime" }
yulang-runtime-finalize = { version = "0.1.0", path = "../yulang-runtime-finalize" }
yulang-runtime-ir = { version = "0.1.0", path = "../yulang-runtime-ir" }
yulang-sources = { version = "0.1.3", path = "../yulang-sources" }
