[package]
name = "yulang-compile"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Source-level compilation glue for Yulang frontends and backends."
repository = "https://github.com/momota1029/yulang"
readme = "../../README.md"

[dependencies]
yulang-infer = { version = "0.1.4", path = "../yulang-infer" }
yulang-runtime-lower = { version = "0.1.1", path = "../yulang-runtime-lower" }
yulang-monomorphize = { version = "0.1.0", path = "../yulang-monomorphize" }
yulang-runtime-ir = { version = "0.1.0", path = "../yulang-runtime-ir" }
yulang-runtime-refine = { version = "0.1.0", path = "../yulang-runtime-refine" }
yulang-runtime-types = { version = "0.1.0", path = "../yulang-runtime-types" }
yulang-sources = { version = "0.1.4", path = "../yulang-sources" }
