[package]
name = "yulang-elaborated-ir"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Typed monomorphic elaboration output IR for Yulang"
repository = "https://github.com/momota1029/yulang"
readme = "../../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
yulang-erased-ir = { version = "0.1.0", path = "../yulang-erased-ir" }
