[package]
name = "yulang-infer"
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Type inference engine for Yulang, including Simple-Sub-style subtyping and row-like algebraic effect inference."
repository = "https://github.com/momota1029/yulang"
readme = "../../README.md"

[dependencies]
smallvec = "1"
dashmap = "6"
rustc-hash = "2"
rowan = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
yulang-typed-ir = { version = "0.1.2", path = "../yulang-typed-ir" }
yulang-parser = { version = "0.1.2", path = "../yulang-parser" }
yulang-sources = { version = "0.1.3", path = "../yulang-sources" }

[dev-dependencies]
