[package]
name = "yulang-ls"
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Deprecated: use `yulang server` from the `yulang` crate instead."
repository = "https://github.com/momota1029/yulang"
readme = "../../README.md"

[[bin]]
name = "yulang-ls"
path = "src/main.rs"

[dependencies]
yulang2 = { path = "../yulang2" }
