[package]
name = "yulang-native"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Native backend experiments for Yulang"
repository = "https://github.com/momota1029/yulang"
readme = "../../README.md"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = []

[dependencies]
cranelift-codegen = "0.121"
cranelift-frontend = "0.121"
cranelift-jit = "0.121"
cranelift-module = "0.121"
cranelift-native = "0.121"
cranelift-object = "0.121"
mmtk = { version = "0.32", default-features = false }
rustc-hash = "2"
yulang-typed-ir = { version = "0.1.2", path = "../yulang-typed-ir" }
yulang-runtime = { version = "0.1.1", path = "../yulang-runtime" }
