[package]
name = "yulang-native"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Archived native backend compatibility stub for Yulang"
repository = "https://github.com/momota1029/yulang"
readme = "../../README.md"

[dependencies]
yulang-typed-ir = { version = "0.1.2", path = "../yulang-typed-ir" }
yulang-runtime = { version = "0.1.1", path = "../yulang-runtime" }
