[package]
name = "yulang-parser"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Parser and syntax tree support for Yulang"
repository = "https://github.com/momota1029/yulang"
readme = "../../README.md"

[dependencies]
chasa = "0.5.0"
im = "15.1.0"
smallvec = "1.13.2"
unicode-ident = "1.0.12"
reborrow-generic = "0.1.2"
qp-trie = "0.8.1"
rowan = "0.15"
either = "1.13.0"
