[package]
name = "yulang-runtime-finalize"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Runtime type finalization and monomorphization planning for Yulang"
repository = "https://github.com/momota1029/yulang"
readme = "../../README.md"
publish = false

[dependencies]
yulang-runtime-ir = { path = "../yulang-runtime-ir" }
yulang-typed-ir = { version = "0.1.2", path = "../yulang-typed-ir" }

[dev-dependencies]
yulang-infer = { path = "../yulang-infer" }
yulang-runtime = { path = "../yulang-runtime" }
yulang-vm = { path = "../yulang-vm" }
