[package]
name = "yulang-runtime-finalize"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Runtime type finalization and monomorphization planning for Yulang"
repository = "https://github.com/momota1029/yulang"
readme = "../../README.md"
publish = false

[dependencies]
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
yulang-runtime-ir = { path = "../yulang-runtime-ir" }
yulang-runtime = { path = "../yulang-runtime" }
yulang-sources = { version = "0.1.3", path = "../yulang-sources" }
yulang-typed-ir = { version = "0.1.2", path = "../yulang-typed-ir" }

[dev-dependencies]
yulang-compile = { path = "../yulang-compile" }
yulang-infer = { path = "../yulang-infer" }
yulang-vm = { path = "../yulang-vm" }
