[package]
name = "yulang-runtime-lower"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Lower typed core IR to runtime IR for Yulang"
repository = "https://github.com/momota1029/yulang"
readme = "../../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
yulang-runtime-ir = { version = "0.1.0", path = "../yulang-runtime-ir" }
yulang-runtime-refine = { version = "0.1.0", path = "../yulang-runtime-refine" }
yulang-runtime-types = { version = "0.1.0", path = "../yulang-runtime-types" }
yulang-typed-ir = { version = "0.1.2", path = "../yulang-typed-ir" }
