[package]
name = "yulang-runtime-refine"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Runtime type refinement, validation, invariant checks, and hygiene printing for Yulang."
repository = "https://github.com/momota1029/yulang"
readme = "../../README.md"

[dependencies]
yulang-runtime-ir = { version = "0.1.0", path = "../yulang-runtime-ir" }
yulang-runtime-types = { version = "0.1.0", path = "../yulang-runtime-types" }
yulang-typed-ir = { version = "0.1.3", path = "../yulang-typed-ir" }
