[package]
name = "yulang-runtime"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Runtime IR, validation, monomorphization, and VM support for Yulang"
repository = "https://github.com/momota1029/yulang"
readme = "../../README.md"

[dependencies]
num-bigint = "0.4"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1.12"
yulang-typed-ir = { version = "0.1.2", path = "../yulang-typed-ir" }

[dev-dependencies]
yulang-infer = { version = "0.1.3", path = "../yulang-infer" }
