[package]
name = "yulang-sources"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Source-set collection, realms, compilation units, and syntax artifacts for Yulang"
repository = "https://github.com/momota1029/yulang"
readme = "../../README.md"

[dependencies]
rowan = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
yulang-parser = { version = "0.1.2", path = "../yulang-parser" }
yulang-typed-ir = { version = "0.1.2", path = "../yulang-typed-ir" }

[dev-dependencies]
