[package]
name = "yulang-typed-ir"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Typed intermediate representation and principal-type evidence for Yulang"
repository = "https://github.com/momota1029/yulang"
readme = "../../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
