[package]
name = "yulang-vm"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "VM execution, host requests, and VM value containers for Yulang"
repository = "https://github.com/momota1029/yulang"
readme = "../../README.md"

[dependencies]
num-bigint = "0.4"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1.12"
yulang-runtime-lower = { version = "0.1.1", path = "../yulang-runtime-lower" }
yulang-runtime-ir = { version = "0.1.0", path = "../yulang-runtime-ir" }
yulang-runtime-refine = { version = "0.1.0", path = "../yulang-runtime-refine" }
yulang-runtime-types = { version = "0.1.0", path = "../yulang-runtime-types" }
yulang-typed-ir = { version = "0.1.3", path = "../yulang-typed-ir" }

[dev-dependencies]
yulang-compile = { version = "0.1.0", path = "../yulang-compile" }
yulang-infer = { version = "0.1.4", path = "../yulang-infer" }
