[package]
name = "yulang-wasm"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"
yulang-runtime = { path = "../yulang-runtime" }
yulang-source = { path = "../yulang-source" }
yulang-infer = { path = "../yulang-infer" }
yulang-core-ir = { path = "../yulang-core-ir" }

[build-dependencies]
serde_json = "1"
yulang-core-ir = { path = "../yulang-core-ir" }
yulang-infer = { path = "../yulang-infer" }
yulang-source = { path = "../yulang-source" }
