[package]
name = "yulang-wasm"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"
yulang-runtime = { path = "../yulang-runtime" }
yulang-runtime-finalize = { path = "../yulang-runtime-finalize" }
yulang-vm = { path = "../yulang-vm" }
yulang-sources = { path = "../yulang-sources" }
yulang-infer = { path = "../yulang-infer" }
yulang-typed-ir = { path = "../yulang-typed-ir" }
yulang-editor = { path = "../yulang-editor" }

[build-dependencies]
postcard = { version = "1", features = ["alloc"] }
yulang-typed-ir = { path = "../yulang-typed-ir" }
yulang-infer = { path = "../yulang-infer" }
yulang-sources = { path = "../yulang-sources" }
