[package]
name = "yulang"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1"
chasa = "0.5.0"
control-ir = { path = "../control-ir" }
either = "1.13.0"
evidence-vm = { path = "../evidence-vm" }
im = "15.1.0"
infer = { path = "../infer" }
mono-runtime = { path = "../mono-runtime" }
poly = { path = "../poly" }
reborrow-generic = "0.1.2"
rowan = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specialize = { path = "../specialize" }
sources = { path = "../sources" }
parser = { path = "../parser" }
toml = "0.8"
yulang-editor = { path = "../yulang-editor" }
unicode-ident = "1.0.12"
unicode-width = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
